# rsdiff

./: .gitignore  .gitpod.yml  Cargo.toml  README.md  SECURITY.md
acme/: Cargo.toml
acme/benches/: default.rs  tensor.rs
acme/examples/: autodiff.rs  cgraph.rs  graph.rs  macros.rs  simple.rs  tensor.rs
acme/examples/app/: Cargo.toml
acme/src/: lib.rs
acme/src/agents/: agent.rs  environment.rs  mod.rs
acme/src/app/: application.rs  mod.rs
acme/tests/: autodiff.rs  default.rs  macros.rs
agents/: Cargo.toml
agents/src/: agent.rs  lib.rs
agents/src/actors/: actor.rs  mod.rs
agents/src/env/: environment.rs  mod.rs
agents/src/specs/: mod.rs
core/: Cargo.toml
core/examples/: dag.rs  func.rs
core/src/: error.rs  harmonica.rs  lib.rs  macros.rs  primitives.rs  seal.rs  utils.rs
core/src/actors/: actor.rs  mod.rs
core/src/cmp/: constants.rs  dual.rs  mod.rs  operators.rs  variables.rs
core/src/cmp/id/: atomic.rs  gradient.rs  id.rs  mod.rs
core/src/error/: err.rs  kinds.rs  mod.rs
core/src/error/kinds/: external.rs  mod.rs  propagation.rs  standard.rs  types.rs
core/src/errors/: error.rs  kinds.rs  mod.rs
core/src/errors/kinds/: external.rs  mod.rs  propagation.rs  standard.rs
core/src/eval/: evaluator.rs  mod.rs
core/src/events/: event.rs  mod.rs  opts.rs
core/src/exp/: basic.rs  edge.rs  graph.rs  mod.rs  node.rs
core/src/exp/dynamic/: edge.rs  graph.rs  mod.rs  node.rs
core/src/exp/ops/: addition.rs  mod.rs  multiply.rs
core/src/graphs/: edge.rs  graph.rs  mod.rs  node.rs  value.rs
core/src/graphs/dcg/: edge.rs  graph.rs  node.rs
core/src/graphs/dynamic/: edge.rs  graph.rs  mod.rs  node.rs
core/src/graphs/scg/: edge.rs  graph.rs  node.rs
core/src/hkt/: applicative.rs  functor.rs  mod.rs  monad.rs
core/src/id/: atomic.rs  gradient.rs  id.rs  mod.rs  traits.rs
core/src/id/kinds/: atomic.rs
core/src/ids/: gradient.rs  id.rs
core/src/math/: mod.rs
core/src/math/linalg/: fields.rs  mod.rs
core/src/math/props/: mod.rs
core/src/ops/: arithmetic.rs  binary.rs  expr.rs  gradient.rs  kinds.rs  mod.rs  operator.rs  ops.rs  ternary.rs  unary.rs
core/src/ops/binary/: args.rs  arithmetic.rs  kinds.rs  mod.rs  operator.rs  specs.rs
core/src/ops/kinds/: nary.rs
core/src/ops/ternary/: kinds.rs
core/src/ops/traits/: evaluate.rs  operand.rs  operator.rs  params.rs
core/src/ops/unary/: kinds.rs  mod.rs  operator.rs  specs.rs
core/src/specs/: arith.rs  conduit.rs  eval.rs  event.rs  gradient.rs  mod.rs  objects.rs  operand.rs  operator.rs  prop.rs  scalar.rs  store.rs
core/src/specs/func/: mod.rs  structural.rs
core/src/specs/hkt/: applicative.rs
core/src/stores/: gradient.rs  mod.rs  specs.rs  stack.rs
core/src/traits/: eval.rs
core/src/types/: constants.rs  dtype.rs  dual.rs  mod.rs  operators.rs  variables.rs
core/tests/: utils.rs
derive/: Cargo.toml
derive/examples/: params.rs
derive/src/: lib.rs  utils.rs
derive/src/ast/: mod.rs
derive/src/cmp/: mod.rs
derive/src/cmp/params/: mod.rs
exp/container/: Cargo.toml
exp/container/src/: lib.rs  macros.rs  seal.rs
exp/container/src/data/: container.rs  elem.rs  mod.rs  specs.rs
exp/container/src/dim/: mod.rs
exp/container/src/index/: mod.rs
exp/container/src/iter/: iterator.rs  mod.rs  position.rs
exp/container/tests/: default.rs
exp/ndtensor/: Cargo.toml  README.md
exp/ndtensor/src/: context.rs  errors.rs  lib.rs  macros.rs  specs.rs  tensor.rs  utils.rs
exp/ndtensor/src/data/: container.rs  elem.rs  mod.rs  specs.rs
exp/ndtensor/tests/: arith.rs  tensor.rs
graphs/: Cargo.toml
graphs/src/: error.rs  graph.rs  lib.rs
graphs/src/cg/: edge.rs  graph.rs  mod.rs  node.rs
graphs/src/dcg/: edge.rs  graph.rs  mod.rs  node.rs
graphs/src/errors/: error.rs  mod.rs
graphs/src/grad/: id.rs  mod.rs  store.rs
graphs/src/id/: entry.rs  id.rs  mod.rs
graphs/src/ops/: arithmetic.rs  kinds.rs  mod.rs
graphs/src/scg/: edge.rs  graph.rs  mod.rs  node.rs
graphs/tests/: dcg.rs  default.rs  scg.rs
macros/: Cargo.toml
macros/examples/: autodiff.rs  sample.rs
macros/src/: autodiff.rs  error.rs  gradient.rs  graph.rs  lib.rs  operator.rs  partial.rs  utils.rs
macros/src/ad/: autodiff.rs  mod.rs
macros/src/ast/: ad.rs  grad.rs  gradient.rs  mod.rs  operator.rs  partials.rs
macros/src/cmp/: graph.rs  mod.rs  partials.rs  store.rs
macros/src/diff/: mod.rs
macros/src/eval/: block.rs  item.rs  mod.rs  stmt.rs
macros/src/grad/: mod.rs
macros/src/handle/: block.rs  item.rs  mod.rs
macros/src/ops/: binary.rs  mod.rs  unary.rs
macros/tests/: arith.rs  autodiff.rs  default.rs  external.rs  gradient.rs  partial.rs
math/: Cargo.toml
math/src/: lib.rs
math/src/num/: mod.rs
math/src/traits/: mod.rs
math/tests/: default.rs
net/: Cargo.toml
net/src/: address.rs  lib.rs
rsdiff/: Cargo.toml
rsdiff/benches/: default.rs
rsdiff/examples/: autodiff.rs  graph.rs  macros.rs  simple.rs
rsdiff/src/: lib.rs
rsdiff/tests/: macros.rs
tensor/: Cargo.toml
tensor/src/: error.rs  lib.rs  specs.rs  tensor.rs  utils.rs
tensor/src/actions/: arange.rs  mod.rs
tensor/src/backend/: devices.rs  mod.rs
tensor/src/data/: container.rs  elem.rs  layout.rs  mod.rs  scalar.rs  specs.rs  tensor.rs
tensor/src/errors/: error.rs  mod.rs
tensor/src/fmt/: mod.rs
tensor/src/impls/: arith.rs  create.rs  grad.rs  iter.rs  linalg.rs  num.rs  reshape.rs
tensor/src/io/: mod.rs
tensor/src/linalg/: arith.rs  mod.rs  specs.rs
tensor/src/ops/: backprop.rs  kinds.rs  mod.rs  op.rs
tensor/src/shape/: axis.rs  error.rs  layout.rs  mod.rs  rank.rs  shape.rs  stride.rs
tensor/src/specs/: affine.rs  create.rs  mod.rs  moves.rs  ndtensor.rs  scalar.rs
tensor/src/stats/: impl_stats.rs  mod.rs
tensor/src/storage/: mod.rs
tensor/src/store/: layout.rs  mod.rs  storage.rs
tensor/src/types/: dtype.rs  id.rs  kinds.rs  mod.rs  mode.rs  order.rs  tensors.rs
tensor/tests/: arith.rs  backward.rs  composition.rs  default.rs  iter.rs  linalg.rs  reshape.rs  stats.rs  tensor.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
(+84 files in other folders)
