[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "Acme is an autodiff library for Rust."
edition = "2021"
homepage = "https://github.com/FL03/acme/wikis"
license = "Apache-2.0"
repository = "https://github.com/FL03/acme"
readme = "README.md"
version = "0.3.0-nightly" # TODO - Update cargo package version

[workspace]
default-members = [
    "acme"
]
exclude = [ ]
members = [
    "acme", 
    "core",
    "derive",
    "graphs",
    "macros", 
    "tensor"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
strum = { features = ["derive"], version = "0.26" }
smart-default = "0.7"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = "unwind"
rpath = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
panic = "unwind"
rpath = false
opt-level = "z"
overflow-checks = false
