[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com>"]
categories = ["mathematics", "science"]
description = "rsdiff aims to provide a solid foundation for developing robust machine-learning systems in Rust."
edition = "2021"
homepage = "https://github.com/FL03/rsdiff/wikis"
keywords = ["acme", "autodiff", "mathematics", "tensor"]
license = "Apache-2.0"
repository = "https://github.com/FL03/rsdiff"
readme = "README.md"
version = "0.0.1"
# version = "0.3.2-nightly"

[workspace]
default-members = [
    "rsdiff"
]

exclude = [ 
]

members = [
    "rsdiff", 
    "core",
    "derive",
    "graphs",
    "macros", 
    "math",
    
]
resolver = "2"

[workspace.dependencies]
paste = "1"
scsys = "0.2.1"
strum = { features = ["derive"], version = "0.26" }
smart-default = "0.7"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = "unwind"
rpath = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
panic = "unwind"
rpath = false
opt-level = "z"
overflow-checks = false
