[package]
authors.workspace = true
categories = []
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["async", "scsys"]
license.workspace = true
name = "acme"
publish = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "core", 
    "tensor",
]

full = [
    "core",
    "derive",
    "serde",
    "tensor"
]

core = [
    "dep:acme-core"
]

derive = [
    "dep:acme-derive",
    "macros"
]

macros = [
    "dep:acme-macros"
]

tensor = [
    "dep:acme-tensor"
]

serde = [
    "acme-core/serde",
    "acme-tensor/serde"
]


[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = true
test = true

[[example]]
name = "autodiff"
required-features = ["macros"]

[[test]]
name = "autodiff"
required-features = ["macros"]

[build-dependencies]

[dependencies]
acme-core = { optional = true, path = "../core", version = "0.3.0" }
acme-derive = { optional = true, path = "../derive", version = "0.3.0" }
acme-macros = { optional = true, path = "../macros", version = "0.3.0" }
acme-tensor = { optional = true, path = "../tensor", version = "0.3.0" }

[dev-dependencies]
approx = "0.5"
num = "0.4"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
