[package]
authors.workspace = true
categories = []
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["async", "scsys"]
license.workspace = true
name = "acme"
publish = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "core", 
    "tensor",
]

full = [
    "core",
    "derive",
    "graph",
    "serde",
    "tensor"
]

core = []

derive = [
    "dep:acme-derive",
    "macros"
]

graph = [
    "dep:acme-graphs"
]

macros = [
    "dep:acme-macros"
]

tensor = [
    "dep:acme-tensor"
]

serde = [
    "acme-core/serde",
    "acme-graphs/serde",
    "acme-tensor/serde"
]


[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = true
test = true

[[example]]
name = "autodiff"
required-features = ["macros"]

[[example]]
name = "cgraph"
required-features = ["graph"]

[[test]]
name = "autodiff"
required-features = ["macros"]

[[test]]
name = "macros"
required-features = ["macros"]

[build-dependencies]

[dependencies]
acme-core = { path = "../core", version = "0.3.0-nightly" }
acme-derive = { optional = true, path = "../derive", version = "0.3.0-nightly" }
acme-graphs = { optional = true, path = "../graphs", version = "0.3.0-nightly" }
acme-macros = { optional = true, path = "../macros", version = "0.3.0-nightly" }
acme-tensor = { optional = true, path = "../tensor", version = "0.3.0-nightly" }

[dev-dependencies]
approx = "0.5"
num = "0.4"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
