[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "acme"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "core", 
    "tensor",
]

full = [
    "core",
    "derive",
    "graph",
    "serde",
    "tensor"
]

core = []

derive = [
    "dep:acme-derive",
    "macros"
]

graph = [
    "dep:acme-graphs"
]

macros = [
    "dep:acme-macros"
]

tensor = [
    "dep:acme-tensor"
]

serde = [
    "acme-core/serde",
    "acme-graphs/serde",
    "acme-tensor/serde"
]

std = [
    "acme-core/std",
    "acme-tensor/std"
]


[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = true
test = true

[[example]]
doc = true
name = "autodiff"
required-features = ["macros"]

[[example]]
name = "graph"
required-features = ["graph"]

[[test]]
name = "macros"
required-features = ["macros"]


[build-dependencies]

[dependencies]
acme-core = { path = "../core", version = "0.3.0" }
acme-derive = { optional = true, path = "../derive", version = "0.3.0" }
acme-graphs = { optional = true, path = "../graphs", version = "0.3.0" }
acme-macros = { optional = true, path = "../macros", version = "0.3.0" }
acme-tensor = { optional = true, path = "../tensor", version = "0.3.0" }
# acme-core = { path = "../core", version = "0.3.0-nightly.4" }
# acme-derive = { optional = true, path = "../derive", version = "0.3.0-nightly.4" }
# acme-graphs = { optional = true, path = "../graphs", version = "0.3.0-nightly.4" }
# acme-macros = { optional = true, path = "../macros", version = "0.3.0-nightly.4" }
# acme-tensor = { optional = true, path = "../tensor", version = "0.3.0-nightly.4" }

[dev-dependencies]
approx = "0.5"
num = "0.4"
rand = "0.8"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
