[package]
authors.workspace = true
description = "This is the core library for the Acme project. It contains the core primitives that are used throughout the project."
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "acme-core"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

serde = [
    "dep:serde",
    "serde-ext",
]

serde-ext = [
    "dep:serde_json",
]

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
doctest = true
test = true

[build-dependencies]

[dev-dependencies]

[dependencies]
anyhow.workspace = true
lazy_static = "1"
num = "0.4"
serde = { optional = true, features = ["derive"], version = "1" }
serde_json = { optional = true, version = "1" }
smart-default.workspace = true
strum.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
