[package]
authors.workspace = true
description = "This is the core library for the Acme project. It contains the core primitives that are used throughout the project."
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "rsdiff-core"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "std",
]

full = [
    "default",
    "approx",
    "serde",
    "trace"
]

approx = [
    "dep:approx"
]

serde = [
    "dep:serde",
    "serde-ext",
]

serde-ext = [
    "dep:serde_json",
]

std = []

trace = [
    "dep:tracing",
]

wasi = []

wasm = []

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
doctest = true
test = true

[build-dependencies]

[dependencies]
approx = { optional = true, version = "0.5" }
num = "0.4"
paste.workspace = true
serde = { optional = true, features = ["derive"], version = "1" }
serde_json = { optional = true, version = "1" }
smart-default.workspace = true
strum.workspace = true
tracing = { optional = true, version = "0.1" }

[dev-dependencies]
approx = "0.5"
lazy_static = "1"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
