[package]
build = "build.rs"
description = "This is the core library for the Acme project. It contains the core primitives that are used throughout the project."
name = "rsdiff-core"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]

[lib]
crate-type = [
    "cdylib",
    "rlib"
]
bench = false
doc = true
doctest = true
test = true

[dependencies]
# custom
scsys = { workspace = true }
# error handling
anyhow = { optional = true, workspace = true }
thiserror = { workspace = true }
# math
approx = { optional = true, workspace = true}
num = { workspace = true }
num-traits = { workspace = true }
# serialization
serde = { optional = true, features = ["derive"], workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# macros
paste = { workspace = true }
smart-default = { workspace = true }
strum = { workspace = true  }
# tracing
tracing = { optional = true, workspace = true}

[dev-dependencies]
lazy_static = { workspace = true }

[features]
default = [
    "std",
]

full = [
    "default",
    "anyhow",
    "approx",
    "json",
    "serde",
    "tracing",
]

# ************* [FF:Environments] *************
std = [
    "alloc",
    "anyhow?/std",
    "approx?/std",
    "num/std",
    "num-traits/std",
    "scsys/std",
    "serde?/std",
    "serde_json?/std",
    "tracing?/std",
    "thiserror/std",
]

wasi = [
    "scsys/wasi",
]

wasm = [
    "scsys/wasm",
]

# ************* [FF:Dependencies] *************
alloc = [
    "num/alloc",
    "scsys/alloc",
    "serde?/alloc",
    "serde_json?/alloc",
]

anyhow = ["dep:anyhow"]

approx = ["dep:approx"]

json = [
    "alloc",
    "scsys/json",
    "serde",
    "serde_json"
]

serde = [
    "dep:serde",
    "dep:serde_derive",
    "scsys/serde",
]

serde_json = ["dep:serde_json"]

tracing = [
    "dep:tracing",
    "scsys/tracing"
]

# ************* [Unit Tests] *************
[[test]]
name = "default"

[[test]]
name = "utils"
required-features = ["std"]
