[package]
build = "build.rs"
description = "Computational graphs for Rust"
name = "rsdiff-graphs"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]

[lib]
crate-type = [
    "cdylib",
    "rlib"
]
bench = false
doc = true
doctest = true
test = true

[dependencies]
rsdiff-core = { workspace = true }
# custom
scsys = { workspace = true }
# data-structures
petgraph = { workspace = true }
# error handling
anyhow = { optional = true, workspace = true }
thiserror = { workspace = true }
# math
approx = { optional = true, workspace = true}
num = { workspace = true }
num-traits = { workspace = true }
# serialization
serde = { optional = true, features = ["derive"], workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# macros
paste = { workspace = true }
smart-default = { workspace = true }
strum = { workspace = true  }
# tracing
tracing = { optional = true, workspace = true}

[features]
default = [
    "std"
]

full = [
    "default",
    "anyhow",
    "approx",
    "json",
    "serde",
    "tracing",
]

# ************* [FF:Environments] *************
std = [
    "anyhow?/std",
    "approx?/std",
    "num/std",
    "num-traits/std",
    "petgraph/std",
    "rsdiff-core/std",
    "serde?/std",
    "serde_json?/std",
    "tracing?/std",
    "thiserror/std",
]

wasi = [
    "rsdiff-core/wasi",
]

wasm = [
    "rsdiff-core/wasm",
]

# ************* [FF:Dependencies] *************

anyhow = [
    "dep:anyhow",
    "rsdiff-core/anyhow",
]

approx = [
    "dep:approx",
    "rsdiff-core/approx",
]

json = [
    "std",
    "rsdiff-core/json",
    "serde",
    "serde_json",
]

serde = [
    "dep:serde",
    "dep:serde_derive",
    "petgraph/serde-1",
    "rsdiff-core/serde",
]

serde_json = ["dep:serde_json"]

tracing = [
    "dep:tracing",
    "rsdiff-core/tracing",
]
