[package]
build = "build.rs"
description = "the crate implements custom macros for rsdiff"
name = "rsdiff-macros"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true
test = true

[build-dependencies]

[dependencies]
num = "0.4"
proc-macro2 = { features = ["nightly", "span-locations"], version = "1" }
quote = "1"
syn = { features = ["extra-traits", "fold", "full"], version = "2" }

[dev-dependencies]
approx = "0.5"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
