[package]
build = "build.rs"
description = "the crate implements custom macros for rsdiff"
name = "rsdiff-macros"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true
bench = false
doc = true
doctest = true
test = true

[dependencies]
num = { workspace = true }
# proc-macros
proc-macro2 = { features = ["span-locations"], version = "1" }
quote = { version = "1" }
syn = { features = ["extra-traits", "fold", "full"], version = "2" }

[dev-dependencies]
approx = { workspace = true }
