[package]
build = "build.rs"
description = "the crate provides custom mathematical operations for rsdiff"
name = "rsdiff-math"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]

[lib]
crate-type = [
    "cdylib",
    "rlib"
]
bench = false
doc = true
doctest = true
test = true

[dependencies]
rsdiff-core = { workspace = true }

# error handling
anyhow = { optional = true, workspace = true }
thiserror = { workspace = true }
# math
approx = { optional = true, workspace = true}
num = { workspace = true }
num-traits = { workspace = true }
# serialization
serde = { optional = true, features = ["derive"], workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# macros
paste = { workspace = true }
smart-default = { workspace = true }
strum = { workspace = true  }
# tracing
tracing = { optional = true, workspace = true}

[features]
default = [
    "std"
]

full = [
    "default",
    "anyhow",
    "approx",
    "json",
    "serde",
    "tracing",
]

# ************* [FF:Environments] *************
std = [
    "alloc",
    "anyhow?/std",
    "approx?/std",
    "num/std",
    "num-traits?/std",
    "rsdiff-core/std",
    "serde?/std",
    "serde-json?/std",
    "tracing?/std",
    "thiserror/std",
]

wasi = [
    "rsdiff-core/wasi",
]

wasm = [
    "rsdiff-core/wasm",
]

# ************* [FF:Dependencies] *************
alloc = [
    "num/alloc",
    "serde?/alloc",
    "serde_json?/alloc",
]

anyhow = [
    "dep:anyhow",
    "rsdiff-core/anyhow",
]

approx = [
    "dep:approx",
    "rsdiff-core/approx",
]

json = [
    "alloc",
    "rsdiff-core/json",
    "serde",
    "serde_json",
]

serde = [
    "dep:serde",
    "dep:serde_derive",
    "rsdiff-core/serde",
]

serde_json = ["dep:serde_json"]

tracing = [
    "dep:tracing",
    "rsdiff-core/tracing",
]
