[package]
description = "acme"
name = "acme-net"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
async-trait = "0.1.60"
axum = "0.6.1"
http = "0.2.8"
http-body = "0.4.5"
hyper = { features = ["full"], version = "0.14.23" }
mio = "0.8.4"
scsys.workspace = true
serde.workspace = true
serde_json.workspace = true
strum = { features = ["derive"], version = "0.25.0" }
tokio = { features = ["macros", "signal"], version = "1.24" }
tower = "0.4.13"
tower-http = { features = [], version = "0.5.1" }
tracing = { features = [], version = "0.1.37" }
tracing-subscriber = { features = [], version = "0.3.16" }

[dev-dependencies]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
