[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsdiff"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "core",
    "math",
    "graph",
]

full = [
    "default",
    "derive",
    "serde",
    "trace",
]

core = []

derive = [
    "dep:rsdiff-derive",
    "macros"
]

graph = [
    "dep:rsdiff-graphs"
]

macros = [
    "dep:rsdiff-macros"
]

math = [
    "dep:rsdiff-math"
]

serde = [
    "rsdiff-core/serde",
    "rsdiff-graphs/serde",
]

std = [
    "rsdiff-core/std",
    "rsdiff-graphs/std",
]


trace = [
    "rsdiff-core/trace",
    "rsdiff-graphs/trace",
]

wasi = [
    "rsdiff-core/wasi",
    "rsdiff-graphs/wasi",
]

wasm = [
    "rsdiff-core/wasm",
    "rsdiff-graphs/wasm",
]



[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = true
test = true


[[example]]
doc = true
name = "autodiff"
required-features = ["macros"]

[[example]]
name = "graph"
required-features = ["graph"]

[[example]]
name = "macros"
required-features = ["macros"]


[[test]]
name = "macros"
required-features = ["macros"]


[build-dependencies]

[dependencies]
rsdiff-core = { path = "../core", version = "0.0.1" }
rsdiff-derive = { optional = true, path = "../derive", version = "0.0.1" }
rsdiff-graphs = { optional = true, path = "../graphs", version = "0.0.1" }
rsdiff-macros = { optional = true, path = "../macros", version = "0.0.1" }
rsdiff-math = { optional = true, path = "../math", version = "0.0.1" }

[dev-dependencies]
approx = "0.5"
lazy_static = "1"
num = "0.4"
rand = "0.8"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
