[package]
build = "build.rs"
name = "rsdiff"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]

[lib]
crate-type = [
    "cdylib",
    "rlib"
]
bench = false
doc = true
doctest = true
test = true

[dependencies]
rsdiff-core = { workspace = true }
rsdiff-derive = { optional = true, workspace = true }
rsdiff-graphs = { optional = true, workspace = true }
rsdiff-macros = { optional = true, workspace = true }
rsdiff-math = { optional = true, workspace = true }

[dev-dependencies]
approx = { features = ["std"], workspace = true }
anyhow = { features = ["std"], workspace = true }
criterion = { features = ["plotters"], workspace = true }

[features]
default = [
    "core",
    "math",
    "graph",
]

full = [
    "default",
    "derive",
    "serde",
    "trace",
]

# ************* [FF:Features] *************
core = []

derive = [
    "dep:rsdiff-derive",
    "macros"
]

graph = ["dep:rsdiff-graphs"]

macros = ["dep:rsdiff-macros"]

math = ["dep:rsdiff-math"]

# ************* [FF:Environments] *************
std = [
    "rsdiff-core/std",
    "rsdiff-graphs/std",
]

wasi = [
    "rsdiff-core/wasi",
    "rsdiff-graphs/wasi",
]

wasm = [
    "rsdiff-core/wasm",
    "rsdiff-graphs/wasm",
]

# ************* [FF:Dependencies] *************
serde = [
    "rsdiff-core/serde",
    "rsdiff-graphs/serde",
]


tracing = [
    "rsdiff-core/tracing",
    "rsdiff-graphs?/trace",
]

# ************* [Benchmarks] *************
[[bench]]
name = "default"
path = "benches/default.rs"
harness = false

# ************* [Examples] *************
[[example]]
doc = true
name = "autodiff"
required-features = ["macros"]

[[example]]
name = "graph"
required-features = ["graph"]

[[example]]
name = "macros"
required-features = ["macros"]

# ************* [Unit Tests] *************
[[test]]
name = "macros"
required-features = ["macros"]
