[package]
build = "build.rs"
name = "rsdiff"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]

[lib]
crate-type = [
    "cdylib",
    "rlib"
]
bench = false
doc = true
doctest = true
test = true

[dependencies]
rsdiff-core = { workspace = true }
rsdiff-derive = { optional = true, workspace = true }
rsdiff-graphs = { optional = true, workspace = true }
rsdiff-macros = { optional = true, workspace = true }
rsdiff-math = { optional = true, workspace = true }

[dev-dependencies]
approx = { features = ["std"], workspace = true }
anyhow = { features = ["std"], workspace = true }
criterion = { features = ["plotters"], workspace = true }
lazy_static = { workspace = true }
num = { workspace = true }

[features]
default = [
    "core",
    "math",
    "graph",
]

full = [
    "default",
    "derive",
    "json",
    "serde",
    "tracing",
]

# ************* [FF:Features] *************
core = []

derive = [
    "dep:rsdiff-derive",
    "macros"
]

graph = ["dep:rsdiff-graphs"]

macros = ["dep:rsdiff-macros"]

math = ["dep:rsdiff-math"]

# ************* [FF:Environments] *************
std = [
    "rsdiff-core/std",
    "rsdiff-graphs/std",
]

wasi = [
    "rsdiff-core/wasi",
    "rsdiff-graphs/wasi",
]

wasm = [
    "rsdiff-core/wasm",
    "rsdiff-graphs/wasm",
]

# ************* [FF:Dependencies] *************
alloc = [
    "rsdiff-core/alloc",
    "rsdiff-math?/alloc",
]

anyhow = [
    "rsdiff-core/anyhow",
    "rsdiff-graphs?/anyhow",
    "rsdiff-math?/anyhow",
]

approx = [
    "rsdiff-core/approx",
    "rsdiff-graphs?/approx",
    "rsdiff-math?/approx",
]

json = [
    "alloc",
    "serde",
    "rsdiff-core/json",
    "rsdiff-graphs?/json",
    "rsdiff-math?/json",
]

serde = [
    "rsdiff-core/serde",
    "rsdiff-graphs?/serde",
    "rsdiff-math?/serde",
]

tracing = [
    "rsdiff-core/tracing",
    "rsdiff-math?/tracing",
    "rsdiff-graphs?/tracing",
]

# ************* [Benchmarks] *************
[[bench]]
name = "default"
path = "benches/default.rs"
harness = false

# ************* [Examples] *************
[[example]]
doc = true
name = "autodiff"
required-features = ["macros"]

[[example]]
name = "graph"
required-features = ["graph"]

[[example]]
name = "macros"
required-features = ["macros"]

# ************* [Unit Tests] *************
[[test]]
name = "macros"
required-features = ["macros"]
