[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ndtensor"
repository.workspace = true
readme.workspace = true
version.workspace = true

[features]
default = [
    "std"
]

std = [
    "acme/std",
]

[dependencies]
acme = { path = "../../acme" }
rawpointer = "0.2.1"