[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = ["data-structures", "math", "science"]
description = "ndtensor is an n-dimensional tensor library for Rust."
edition = "2021"
homepage = "https://github.com/FL03/ndtensor/wiki"
keywords = ["tensor"]
license = "Apache-2.0"
name = "ndtensor"
repository = "https://github.com/FL03/ndtensor"
readme = "README.md"
version = "0.1.0"

[features]
default = [
    "approx",
    "std",
]

approx = [
    "dep:approx",
    "ndarray/approx-0_5",
]

std = [
    "acme-core/std",
    "ndarray/std"
]

serde = [
    "dep:serde",
    "serde-ext"
]

serde-ext = [
    "dep:serde_json",
    "ndarray/serde-1",
    "acme-core/serde",
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = true
test = true

[[test]]
name = "tensor"
required-features = ["approx", "std"]


[build-dependencies]

[dependencies]
approx = { optional = true, version = "0.5" }
itertools = "0.12"
ndarray = "0.15"
num = "0.4"
paste = "1"
serde = { features = ["derive"], optional = true, version = "1" }
serde_json = { optional = true, version = "1" }
smart-default = "0.7"
strum = { features = ["derive"], version = "0.26"}

[dependencies.acme-core]
# default-features = false
# features = ["core", "macros"]
path = "../../core"
version = "0.3.1"


[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
